  compiler using it when a std::string need first to be converted to path
  before adding it to an existing path.
- adding check test to detect when path::append() is used to add a path
  instead of a filename to an existing path object.
- adding a warning when restoring a unix socket if the path to that socket
  is larger than what the sockaddr_un system structure can handle

from 2.6.0 to 2.6.1
- fixed error in man page
- fixing bug in the routine removing files for local filesystem, used at
  archive creation time to remove an existing archive (after user
  confirmation), or at restoration time used to remove file that had been
  removed since the archive of reference was done. The file to remove was
  always removed from the current directory (missing the path part), most
  of the time this was leading to the error message "Error removing file
  ...: Not such file or directory". It could also lead to incorrectly
  removing files (not directory) located in the directory from which
  dar was run.
- fixing bug met while repairing an archive containing delta signature
  for unsaved files
- merging patch from ballsystemlord updating list of file extension
  not to compress (see compress-exclusion defined in /etc/darrc)
- review cat_delta_signature implementation in order to be able to fix
  memory consumption problem when delta signature are used
- fixed missing mark for data CRC when the data is a delta patch, leading
  sequential reading to fail when a delta patch was encountered
- fixed bug in XML output about deleted entries
- fixed XML output to be identical to the one of dar 2.5.x for deleted
  entries.
- Adding the deleted date in 'mtime' field for deleted entries in XML
  output
- fixing bug in xz/lzma routine wrongly reporting internal error when
  corrupted data was met
- fixed code for compilation with clang to succeed (it concerns MAC OS X
  in particular)
- fixed inconsistencies in libdar API that avoided gdar to compile with
  libdar released in 2.6.0
